# testing-graphql-rocket

./: .gitignore  Cargo.toml  README.md
src/: main.rs  schema.rs
