[package]
name = "graphql-rocket-template"
version = "0.1.0"
authors = ["tejasag <tejasagarwalbly@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
juniper = "0.15.3"
juniper_rocket = "0.6.2"
rocket = "0.4.7"
